# 2D-Pose-Graph-Optimization

./: readme.md
q2 dead_reckoning/: deadrk.py
q3 graph_optimizaiton/: CMakeLists.txt  evo_evaluation.py  g2o_pose.txt  gt.txt  initial_pose.txt  main.cpp  optimized_pose.txt
q4 g2o/: g2o_optimization.cpp
